Fixed overflow on top and left in the header

--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -7,6 +7,8 @@
   height: 10vh;
   width: 100vw;
   z-index: 10;
+  top: 0;
+  left: 0;
 }
 
 .navbar__min {
